name:           email-validate
version:        3.0.0.0
license:        BSD3
license-file:   LICENSE
author:         George Pollard <porges@porg.es>
maintainer:     George Pollard <porges@porg.es>
homepage:       https://github.com/Porges/email-validate-hs
category:       Text
synopsis:       Email address validation
description:    Validating an email address string against RFC 5322
build-type:     Simple
stability:      experimental
cabal-version:  >= 1.10

source-repository head
    type: git
    location: git://github.com/Porges/email-validate-hs.git

source-repository this
    type: git
    location: git://github.com/Porges/email-validate-hs.git
    tag: v3.0.0.0

library
    build-depends:
        base >= 4.4 && < 5,
        attoparsec >= 0.12.0 && < 0.14,
        binary >= 0.8 && < 0.9,
        bytestring >= 0.9 && < 0.11,
        deepseq >= 1.4 && < 1.5,
        ip >= 1.3 && < 2.0,
        template-haskell >= 2.10.0.0 && < 2.14,
        text >= 1.2.2.2

    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -Wall -O2
    -- -ddump-simpl -ddump-to-file -dsuppress-all
    exposed-modules:
        Text.Email.QuasiQuotation,
        Text.Email.Validate,
        Text.Email.Parser

    -- This crashes on 8.0.2 :(
    if flag(dump-core)
        ghc-options: -fplugin=DumpCore -fplugin-opt DumpCore:core-html
        build-depends: dump-core

test-suite Main
    type: exitcode-stdio-1.0
    main-is: Main.hs
    ghc-options: -threaded
    hs-source-dirs: tests
    default-language: Haskell2010
    build-depends:
        email-validate,
        base >= 4 && < 5,
        hspec >= 2.2.3 && < 2.6,
        QuickCheck >= 2.4 && < 2.12,
        bytestring >= 0.9 && < 0.11,
        file-embed,
        quickcheck-unicode,
        text,
        xml

test-suite doctests
    type: exitcode-stdio-1.0
    ghc-options: -threaded
    default-language: Haskell2010
    hs-source-dirs: tests
    main-is: doctests.hs
    build-depends:
        base >= 4 && < 5,
        doctest >= 0.8 && < 0.16

benchmark test-cases-bench
    type: exitcode-stdio-1.0
    hs-source-dirs: bench
    main-is: Bench.hs
    build-depends:
        email-validate,
        base >= 4 && < 5,
        bytestring,
        criterion,
        file-embed,
        text,
        xml
    ghc-options: -O2 -Wall
    default-language: Haskell2010

flag dump-core
  description: Dump HTML for the core generated by GHC during compilation
  default:     False


