name:           email-validate
version:        2.3.2.11
license:        BSD3
license-file:   LICENSE
author:         George Pollard <porges@porg.es>
maintainer:     George Pollard <porges@porg.es>
homepage:       https://github.com/Porges/email-validate-hs
category:       Text
synopsis:       Email address validation
description:    Validating an email address string against RFC 5322
build-type:     Simple
stability:      experimental
cabal-version:  >= 1.10

source-repository head
    type: git
    location: git://github.com/Porges/email-validate-hs.git

source-repository this
    type: git
    location: git://github.com/Porges/email-validate-hs.git
    tag: v2.3.2.11

library
    build-depends:
        base >= 4.4 && < 5,
        attoparsec >= 0.10.0 && < 0.14,
        bytestring >= 0.9 && < 0.11,
        template-haskell >= 2.10.0.0 && < 2.16
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -Wall
    exposed-modules:
        Text.Email.QuasiQuotation,
        Text.Email.Validate,
        Text.Email.Parser

test-suite Main
    type: exitcode-stdio-1.0
    main-is: Main.hs
    ghc-options: -threaded
    hs-source-dirs: tests
    default-language: Haskell2010
    build-depends:
        email-validate,
        base >= 4 && < 5,
        hspec >= 2.2.3 && < 2.8,
        QuickCheck >= 2.4 && < 2.14,
        bytestring >= 0.9 && < 0.11

test-suite doctests
    type: exitcode-stdio-1.0
    ghc-options: -threaded
    default-language: Haskell2010
    hs-source-dirs: tests
    main-is: doctests.hs
    build-depends:
        base >= 4 && < 5,
        doctest >= 0.8 && < 0.17

